--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,6 @@
       }
       body {
         background-image: url("../static/backgroundimage/bg_image_plant.jpg");
-        color: red;
         background-size: 1900px 1300px;
         font-family: "Roboto", sans-serif;
       }
@@ -100,6 +99,62 @@
         opacity: 1; /* Khi ảnh hiển thị, làm cho ảnh xuất hiện */
         transform: translateX(0); /* Di chuyển ảnh về vị trí ban đầu */
       }
+      .header-tittle {
+        padding: 30px;
+        font-size: 25px;
+        line-height: 34px;
+        color: #2c6455;
+      }
+      .button_predict {
+        background: linear-gradient(90.05deg, #81d4ad 0.05%, #55c992 99.95%);
+        border-radius: 53px;
+        max-width: 150px;
+        width: 100%;
+        height: 54px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        text-decoration: none;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        border: none;
+        cursor: pointer;
+      }
+      .button_predict:hover {
+        background: linear-gradient(90.18deg, #82e1b4 0.16%, #4ed395 99.87%);
+      }
+      .row-btn {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+      }
+      .btn_cancel {
+        background: linear-gradient(90.05deg, #ee0979 0.05%, #ff6a00 99.95%);
+        border-radius: 53px;
+        max-width: 150px;
+        width: 100%;
+        height: 54px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        text-decoration: none;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        border: none;
+        cursor: pointer;
+        display: none;
+      }
+      .btn_cancel:hover{
+        background: linear-gradient(90.05deg,rgb(237, 36, 133) 0.05%,rgb(240, 131, 52) 99.95%);
+      }
+      #result_predict {
+        padding-left: 30px;
+        color: #2c6455;
+      }
     </style>
   </head>
   <body>
@@ -125,7 +180,7 @@
         >Blossom</span
       >
     </div>
-    <h1>Chọn và tải lên ảnh</h1>
+    <h1 class="header-tittle">Nhận diện bệnh cây ngô thông qua ảnh lá</h1>
     <div class="row-post-image-display">
       <form method="POST" enctype="multipart/form-data">
         <label for="image" class="drop-container" id="dropcontainer">
@@ -141,10 +196,12 @@
           />
         </label>
         <br /><br />
-        <button type="submit">Dự đoán bệnh</button>
-        <button type="button" id="cancel-button" onclick="clearImage()">
-          Hủy chọn ảnh
-        </button>
+        <div class="row-btn">
+          <button type="submit" class="button_predict">Dự đoán bệnh</button>
+          <button type="button" class="btn_cancel" id="cancel-button" onclick="clearImage()">
+            Hủy chọn ảnh
+          </button>
+        </div>
       </form>
       <div id="image-preview" class="i">
         {% if filename %}
@@ -172,8 +229,6 @@
       </div>
     </div>
 
- 
-
     <script>
       function previewImage(event) {
         const file = event.target.files[0];
@@ -200,12 +255,12 @@
         const imagePreview = document.getElementById("image-preview");
         const fileInput = document.getElementById("image");
         const cancelButton = document.getElementById("cancel-button");
-        const result = document.getElementById("result_predict")
+        const result = document.getElementById("result_predict");
 
         // Xóa ảnh trong preview
         imagePreview.innerHTML = "";
         imagePreview.classList.remove("show");
-        result.innerHTML = ""
+        result.innerHTML = "";
 
         // Reset input file
         fileInput.value = "";
